## Process this file with automake to produce Makefile.in

EXTRA_DIST = 00a.xml 00b.xml 00d.xml 01a.xml 01b.xml 01d.xml 02a.xml 02b.xml 02d.xml 03a.xml 03b.xml 03d.xml 04a.xml 04b.xml 04d.xml 05a.xml 05b.xml 05d.xml 06a.xml 06b.xml 06d.xml 07a.xml 07b.xml 07d.xml 08a.xml 08b.xml 08d.xml 09a.xml 09b.xml 09d.xml 10a.xml 10b.xml 10d.xml 11a.xml 11b.xml 11d.xml 12a.xml 12b.xml 12d.xml 13a.xml 13b.xml 13d.xml 14a.xml 14b.xml 14d.xml

